# bazel-nix-hspec-discover

./: BUILD.bazel  README.md  WORKSPACE  nixpkgs.nix  shell.nix
src/MyNamespace/: Lib.hs
test/MyNamespace/Test/: LibSpec.hs
